# substrate

./: .gitignore  CHANGELOG.md  README.md  copier.yml  pyproject.toml  test.sh
.devcontainer/: devcontainer.json
.github/: settings.yml
.github/workflows/: test.yml
hooks/: post_gen_project.py
template/: .editorconfig  .gitattributes  .gitignore.jinja  .pre-commit-config.yaml.jinja  Dockerfile.jinja  README.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  {% if ci == 'gitlab' %}.gitlab-ci.yml{% endif %}.jinja  {% if documentation_tool %}mkdocs.yml{% endif %}.jinja  {% if documentation_tool == 'mkdocs' %}mkdocs.yml{% endif %}.jinja
template/.devcontainer/: devcontainer.json.jinja
template/docs/{% if project_type == 'package' %}reference{% endif %}/: index.md.jinja
template/{% if ci == 'github' %}.github{% endif %}/workflows/: docs.yml.jinja  test.yml.jinja  {% if documentation_tool != 'None' %}docs.yml{% endif %}.jinja  {% if documentation_tool %}docs.yml{% endif %}.jinja  {% if project_type == 'app' %}deploy.yml{% endif %}.jinja  {% if with_conventional_commits %}pr.yml{% endif %}.jinja
template/{% if documentation_tool %}docs{% endif %}/: index.md.jinja
template/{% if documentation_tool %}docs{% endif %}/{% if project_type == 'package' %}reference{% endif %}/: index.md.jinja
template/{% if documentation_tool == 'mkdocs' %}docs{% endif %}/: index.md.jinja
{{ cookiecutter.__project_name_kebab_case }}/: .editorconfig  .gitattributes  .pre-commit-config.yaml  pyproject.toml
(+1 files in other folders)
